package edu.swen1.mtcg.http;

// Define HTTP request methods
public enum RestMethod {
    GET,
    POST,
    PUT,
    PATCH,
    DELETE
}
