package edu.swen1.mtcg.server;


public interface IService {
    Response handleRequest(Request request);
}
